[package]
name = "scrawl"
version = "0.1.0"
edition = "2024"

[dependencies]
anthropic-ai-sdk = "0.2.26"
clap = { version = "4.5.51", features = ["derive"] }
tokio = "1.48.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
ratatui = { version = "0.29.0", features = [
  "unstable-widget-ref",
  "unstable-rendered-line-info",
] }
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
